# routes/login.js
@@ -5,7 +5,7 @@ const resetAuth = require('../middleware/resetAuth');
 
 router.route('/').post(login);
 router.route('/reset').post(reset);
-router.route('/reset/:token').get(clicked);
+router.route('/reset/:token').post(clicked);
 router.route('/reset/success').post(resetAuth, success);
 
 module.exports = router;
