# routes/signup.js
@@ -3,6 +3,6 @@ const router = require('express').Router();
 const { signup, success } = require('../controllers/signup');
 
 router.route('/').post(signup);
-router.route('/verify/:token').get(success);
+router.route('/verify/:token').post(success);
 
 module.exports = router;
