# swagger.yaml
@@ -12,9 +12,107 @@ servers:
 paths:
   /signup:
     post:
+      tags:
+        - signup
       summary: Creates an account
       responses:
-        - '200':
+        '200':
           description: Account successfully created
-        - '409':
+        '409 (error code 1)':
           description: The username is already taken
+        '409 (error code 2)':
+          description: The email is already in use
+  /signup/verify/:token:
+    post:
+      tags:
+        - signup
+      summary: Verifies an email when creating an account
+      responses:
+        '200':
+          description: Email successfully verified
+  /login:
+    post:
+      tags:
+        - login
+      summary: Logs into an account
+      responses:
+        '200':
+          description: Successfully logged in and token and username set in cookies
+        '401':
+          description: Either username or password was wrong
+  /login/reset/:
+    post:
+      tags:
+        - login
+      summary: Sends a password reset link to the account's email inbox
+      responses:
+        '200':
+          description: Email successfully sent
+  /login/reset/:token:
+    post:
+      tags:
+        - login
+      summary: Redirects the user to a password reset form
+      responses:
+        '401':
+          description: Reset token was not found or invalid
+  /login/reset/success:
+    post:
+      tags:
+        - login
+      summary: Resets the password of the account
+      responses:
+        '200':
+          description: Successfully resets the account's password
+        '401':
+          description: Unauthorized to reset password
+  /posts:
+    get:
+      tags:
+        - posts
+      summary: Get posts for the home page
+      responses:
+        '200':
+          description: Home posts successfully received
+  /user/:username:
+    get:
+      tags:
+        - user/:username
+      summary: Get info about an account
+      responses:
+        '200':
+          description: Info about the account successfully received
+    delete:
+      tags:
+        - user/:username
+      summary: Deletes an account
+      responses:
+        '200':
+          description: Account successfully deleted
+        '401':
+          description: Not authorized to delete this account
+  /user/:username/edit:
+    post:
+      tags:
+        - user/:username
+      summary: Edits an account
+      responses:
+        '200':
+          description: Successfully edits account
+        '401':
+          description: Not authorized to edit this account
+  /user/:username/follow:
+    post:
+      tags:
+        - user/:username
+      summary: Follows an account
+      responses:
+        '200':
+          description: Successfully followed/unfollowed user
+        '401':
+          description: Not authorized to follow user on behalf of this account
+  /user/:username/logout:
+    delete:
+      tags:
+        - user/:username
+      summary: Logs out of an account
